# ChangeLog for net-nds/openldap
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-nds/openldap/ChangeLog,v 1.462 2014/05/21 22:33:32 mgorny Exp $

  21 May 2014; Michał Górny <mgorny@gentoo.org> openldap-2.4.38-r2.ebuild:
  Restore CC & CXX exports as they are necessary for the native ABI, bug
  #510980.

*openldap-2.4.38-r2 (21 May 2014)

  21 May 2014; Michał Górny <mgorny@gentoo.org> +openldap-2.4.38-r2.ebuild:
  Introduce multilib support, bug #493174.

  04 Mar 2014; Andreas K. Huettel <dilfridge@gentoo.org>
  openldap-2.4.38-r1.ebuild:
  Add subslot dependency on dev-libs/icu

  01 Mar 2014; Michał Górny <mgorny@gentoo.org> openldap-2.4.30.ebuild,
  openldap-2.4.35-r1.ebuild, openldap-2.4.35.ebuild, openldap-2.4.38-r1.ebuild:
  Update libgcrypt dep to use slot :0.

  10 Jan 2014; Pacho Ramos <pacho@gentoo.org> openldap-2.4.35-r1.ebuild:
  ia64 stable, bug #486302

  08 Jan 2014; Mike Frysinger <vapier@gentoo.org> openldap-2.4.35-r1.ebuild,
  openldap-2.4.35.ebuild, openldap-2.4.38-r1.ebuild:
  Inherit the user eclass for enewuser/etc...

  23 Dec 2013; Agostino Sarubbo <ago@gentoo.org> openldap-2.4.35-r1.ebuild:
  Stable for sparc, wrt bug #486302

  22 Dec 2013; Agostino Sarubbo <ago@gentoo.org> openldap-2.4.35-r1.ebuild:
  Stable for ppc64, wrt bug #486302

  21 Dec 2013; Diego E. Pettenò <flameeyes@gentoo.org>
  openldap-2.4.38-r1.ebuild:
  Fix USE=minimal build.

  21 Dec 2013; Agostino Sarubbo <ago@gentoo.org> openldap-2.4.35-r1.ebuild:
  Stable for ppc, wrt bug #486302

*openldap-2.4.38-r1 (13 Dec 2013)

  13 Dec 2013; Patrick Lauer <patrick@gentoo.org> +openldap-2.4.38-r1.ebuild,
  -openldap-2.4.38.ebuild:
  EAPI5 upgrade #477966

*openldap-2.4.38 (13 Dec 2013)

  13 Dec 2013; Patrick Lauer <patrick@gentoo.org> +openldap-2.4.38.ebuild:
  Bump for 484682

  06 Dec 2013; Robin H. Johnson <robbat2@gentoo.org> -openldap-2.3.43-r1.ebuild,