@@ -9,6 +9,6 @@ LICENSE=OPENLDAP
 RDEPEND=icu? ( dev-libs/icu:= ) ssl? ( !gnutls? ( dev-libs/openssl ) gnutls? ( net-libs/gnutls dev-libs/libgcrypt:0 ) ) sasl? ( dev-libs/cyrus-sasl:= ) !minimal? ( sys-devel/libtool tcpd? ( sys-apps/tcp-wrappers ) odbc? ( !iodbc? ( dev-db/unixODBC ) iodbc? ( dev-db/libiodbc ) ) slp? ( net-libs/openslp ) perl? ( dev-lang/perl[-build(-)] ) samba? ( dev-libs/openssl ) berkdb? ( sys-libs/db ) smbkrb5passwd? ( dev-libs/openssl app-crypt/heimdal ) kerberos? ( virtual/krb5 ) cxx? ( dev-libs/cyrus-sasl:= ) ) selinux? ( sec-policy/selinux-ldap )
 REQUIRED_USE=cxx? ( sasl )
 SLOT=0
-SRC_URI=ftp://ftp.openldap.org/pub/OpenLDAP/openldap-release/openldap-2.4.38.tgz mirror://gentoo/rfc2307bis.schema-20120525
+SRC_URI=ftp://ftp.openldap.org/pub/OpenLDAP/openldap-release/openldap-2.4.38.tgz mirror://gentoo/rfc2307bis.schema-20140524
 _eclasses_=autotools	5256b4f4c1798109f39f308f9f7eaf5f	db-use	1c719875d6599536f956fafea9e1f404	eutils	025442f2eecab39ad0b4e541b6e142af	flag-o-matic	9a539029fe1d390c1828ff633baf26b5	libtool	b9b3340e3a19510f0d9f05cfccbf209f	multilib	fac675dcccf94392371a6abee62d909f	multiprocessing	c2d96fb38f2596209e98fceda58ba1ed	ssl-cert	b53367370fde96e19beca78050a47c61	systemd	9f063b2cc19c5e8030911372aa246c4e	toolchain-funcs	48b38a216afb92db6314d6c3187abea3	user	d0a4d0735a6c0183d707ca919bd72f28	versionator	a8a3963967d6140be9a14b08bb8f047f
-_md5_=1af43289f2f81965c1ad2286b8be83d0
+_md5_=d174dc81039541c5997c25d5e9071d56
