@@ -9,6 +9,6 @@ LICENSE=OPENLDAP
 RDEPEND=icu? ( dev-libs/icu:= ) ssl? ( !gnutls? ( dev-libs/openssl[abi_x86_32(-)?,abi_x86_64(-)?,abi_x86_x32(-)?,abi_mips_n32(-)?,abi_mips_n64(-)?,abi_mips_o32(-)?] ) gnutls? ( net-libs/gnutls[abi_x86_32(-)?,abi_x86_64(-)?,abi_x86_x32(-)?,abi_mips_n32(-)?,abi_mips_n64(-)?,abi_mips_o32(-)?] dev-libs/libgcrypt:0[abi_x86_32(-)?,abi_x86_64(-)?,abi_x86_x32(-)?,abi_mips_n32(-)?,abi_mips_n64(-)?,abi_mips_o32(-)?] ) ) sasl? ( dev-libs/cyrus-sasl:= ) !minimal? ( sys-devel/libtool tcpd? ( sys-apps/tcp-wrappers ) odbc? ( !iodbc? ( dev-db/unixODBC ) iodbc? ( dev-db/libiodbc ) ) slp? ( net-libs/openslp ) perl? ( dev-lang/perl[-build(-)] ) samba? ( dev-libs/openssl ) berkdb? ( sys-libs/db ) smbkrb5passwd? ( dev-libs/openssl app-crypt/heimdal ) kerberos? ( virtual/krb5 ) cxx? ( dev-libs/cyrus-sasl:= ) ) selinux? ( sec-policy/selinux-ldap ) abi_x86_32? ( !<=app-emulation/emul-linux-x86-baselibs-20140508-r3 !app-emulation/emul-linux-x86-baselibs[-abi_x86_32(-)] )
 REQUIRED_USE=cxx? ( sasl )
 SLOT=0
-SRC_URI=ftp://ftp.openldap.org/pub/OpenLDAP/openldap-release/openldap-2.4.38.tgz mirror://gentoo/rfc2307bis.schema-20120525
+SRC_URI=ftp://ftp.openldap.org/pub/OpenLDAP/openldap-release/openldap-2.4.38.tgz mirror://gentoo/rfc2307bis.schema-20140524
 _eclasses_=autotools	5256b4f4c1798109f39f308f9f7eaf5f	db-use	1c719875d6599536f956fafea9e1f404	eutils	025442f2eecab39ad0b4e541b6e142af	flag-o-matic	9a539029fe1d390c1828ff633baf26b5	libtool	b9b3340e3a19510f0d9f05cfccbf209f	multibuild	46527a4656956da3d58acff72c9b59b1	multilib	fac675dcccf94392371a6abee62d909f	multilib-build	cfb9eef4b752cd4e4fbae4213ec6d2e5	multilib-minimal	5bbdc77877c1aa3c6bd89ca3f9196d11	multiprocessing	c2d96fb38f2596209e98fceda58ba1ed	ssl-cert	b53367370fde96e19beca78050a47c61	systemd	9f063b2cc19c5e8030911372aa246c4e	toolchain-funcs	48b38a216afb92db6314d6c3187abea3	user	d0a4d0735a6c0183d707ca919bd72f28	versionator	a8a3963967d6140be9a14b08bb8f047f
-_md5_=1ece06e9574e5fc542c6b503abb27546
+_md5_=87a23eb323b5ad061a681ad7e1f8695f
