@@ -44,6 +44,7 @@ DIST openldap-2.4.35.tgz 5486240 SHA256 16100374c147df0d82a5c52ca60da5eca1a5ea8b
 DIST openldap-2.4.38.tgz 5506085 SHA256 88209a3599ec5d9354fc09bbe29b99db1ffa1b612127c06bad0c5265d0b31fd1 SHA512 df7b6b2b84102ba996f84575396c7505ada851b5f09841fd821d34fd8d62580f85ecc655e2cd3965730b44d6919d64864f56b23791f38b411d142d345f250666 WHIRLPOOL bb6a19b353f9dcde07afe78052ce9d5db5a2aaa09236b69d22da0879e74c4de8587312bad66939702db30af779f7ee9720ad792b73d225f004a1a90d80a6fed1
 DIST rfc2307bis.schema-20100722 9718 SHA256 c61c72e04b45d1e774de1e4084fb2a596210307fc94fe6532b257cdae283b86b SHA512 f71ec7f5ebf826524ef263c2d7e1fc17b7238bd82c3118bfdae2eddbb00e9777ea918c644f0416e818cf60f44807555a0ca48c20cc8738fcbf1675cff7292f17 WHIRLPOOL 77dd13ebbb87f44298cda6f48940662d288a7bf6fbcde3ad88656eee00b470fee11d8ecbd5a6008d3ca3263c48447b30310393881922a258d81722a56e05deb7
 DIST rfc2307bis.schema-20120525 11922 SHA256 41f90e2eafab34925b8223887fa378fc4bbb2801937fdfd3e5a8cf3517229c38 SHA512 cf313fcbbc79d2d1085f7547ed277f58605d931592d70298204f80f40092bf6450561162178e23add2fa5baf19c0b8fff82f69fbf9c2fde6744e9f29f4dac699 WHIRLPOOL b5dd02f0a5ab183b2f981995d886a6e193ec37c0247195a5eb30bc622aa8762130a053f6cad76923bffd55635e0c4e0904aabf0c1124dc9d69080d33f3f53e1c
+DIST rfc2307bis.schema-20140524 12262 SHA256 6cd8154ad86be1d6bb88a79c303dc10a49bce4ce7d21bb417a951d6496df30b1 SHA512 83b89a1deeefc8566b97e7e865b9b6d04541099cbdf719e24538a7d27d61b6209e87ab9003a9f140bd9afd018ec569e71721e3a24090e1902c8b6659d2ba103e WHIRLPOOL 40cef24529fb4bfc1661d03088eccdb17d9056d696b2bf0e698fa248d03f508ba776784bf8abbaffb5f4c2c59b59b29525b4be2babc978fed681e5e3c88073de
 EBUILD openldap-2.3.43-r3.ebuild 18089 SHA256 0cd0fa41bda28541c502aa4b9f195fdc5645c6496d75190956f74d9509833ed4 SHA512 9f8b8227840afe053de34255851c5ca65adca4621d147f8424023a29e13115e8cf6abb9b60d494b0eaa2a860252c010b67771a273b5e90de4bafbab04b7ebc1a WHIRLPOOL 85a1734e6fe638e1bbcb673f3607bca08d747d5a4d9f3185800e0eb2fefd954e2594feeaf6743bd93209ba07f438c7984c418f9b520045ac04b4a91add90a9f5
 EBUILD openldap-2.3.43-r4.ebuild 18282 SHA256 2eb3c15f58c23ab44dc91945fa2b991ff538cbb3f606f5d32c30ea0cbb5a9a95 SHA512 7e87a3d5842953a948f8023684df1198a78874ba3b207831b3464242c853db41ad290de0043d41db80c3b626199191212eeea2ab6b64663e213e8135dfa11ba6 WHIRLPOOL 946eb623a67036c379cd8a037a7feddfa4e655929323f3eb7f2bb6d4d6855f5104833660e25769009d4b59cf85c68e0a24ea604f1124ee5f14aa2b3f9a22739c
 EBUILD openldap-2.4.19-r1.ebuild 19739 SHA256 b13cfe7371e4e139e92b74461bba139cd7202d613a416198fcdb5dbacb65e527 SHA512 33b2550dfbe4eff74cf39de433c5ab6f85f43b0b5ca4ac7ccfe7cc3061cde8acb5bc958ea708881f38e5c7d27bdbc5424a508b21133ec88c3d9bacf17c846741 WHIRLPOOL 5d51de159ae77c61248b8b8c1811f894bf86caf95ca542c16e7dca10ed178944b1fac7b071cffe0acdebfc44362360820423f2c72dde6e3b05303a2638724fd3
@@ -53,26 +54,24 @@ EBUILD openldap-2.4.28-r1.ebuild 21968 SHA256 a031cf75d2579f29547cf86452a013195f
 EBUILD openldap-2.4.30.ebuild 21986 SHA256 276312abf5ff8c17701ba989ff4924d625254ac712c4b07dbfc2cfcc31a1e5c1 SHA512 e7b361c9369d88a5db6be05b4ca9b093dc6e1854d5474723914b4f6941496b133329213a727a52af91677b024c6ac8a1f4172ca16d1a6daddaa5c2e994e823a5 WHIRLPOOL 983f16214624dec209c04cc6c92954fed06febfada6fccc8349d35e92d4e7e37f4caf42ef27d4bc2fee668b66e8dfb3a5909ab3c35f02f42a2a5e56de491acb5
 EBUILD openldap-2.4.35-r1.ebuild 22450 SHA256 6290998a12e2eb27015e2e6e498e4eaf86de6aed47697f8683b41ec4def83908 SHA512 5417415ca0af7baab12c1e3bce279eb8bb1ce9ea36712853e80635c3ec10de14f6bc422dc032332019c3f45e320210569a0e99748c66154bdd5d560de2c05d2c WHIRLPOOL e8ca0968b8374162cb74412f4648d0e88c45f55cb1a337bab64b8704a870b82ac6985ef146bd161b72e674f64cf6ba81205a57a2a3390638caa39855fc53ceff
 EBUILD openldap-2.4.35.ebuild 22183 SHA256 6fbc95f96ce848daf1c603213e829cd7a0372eced3c219a678ca880c6f961038 SHA512 06b6648b3997fa878ee5be17e6c29a2efe43b8e6d949dcfca47e9eef23bda5cc8b2089f890a584d7e0cd0044d5fd07707568cd5f41d81242d5114820f4c2db34 WHIRLPOOL 7d376c1ff464324c703387c426cdced2da71e6fbac1d0f15f9101e051049efa6cd4d296fbe38beb778b80aeb72786f4d083f358dd14a6db25283e8d09f009bfc
-EBUILD openldap-2.4.38-r1.ebuild 22529 SHA256 816d118705dae14f916a06d2e2da79a5012de561ef57bb68a0cfbb145277f2c8 SHA512 92d1afa53e1fbf3c7c5ac0d3319961879873ae269c1db0281748c35e50c5dbd3f90006115477fc53a1a73cb48882aa3a3c0d6117c0e409a50c80622aeda8326b WHIRLPOOL b8b698e8f0af7463c0387659079d70655105482245e236e4e12d9ecf61c7746414ced82c68dc7935291d9f8099084bfaa3181d0644d4f4bb643b64be0bd6410e
-EBUILD openldap-2.4.38-r2.ebuild 23954 SHA256 b9f4859a66677fcdbe5f6dbc9b464133ba236aac661a70ae6d9ce9f22ca2b843 SHA512 4887146ccc2d652244783831e585def858d5aa6bb6ef06821c5cc1d29d5cc0b5690765b8c857d6556a1b962f8d5140f4257e423ea7cf406e96b16258b0cfc725 WHIRLPOOL c89c13ef16f909456580ee20b487b29955c6a829fe413b0470097328c13a64d1dffb7f68179643b83c7c44a9116fcbafaa1a7ad1e2f4e5b444180794210d8992
-MISC ChangeLog 81008 SHA256 72346c459c6d3ee3adc27d7e6f3f7cea9cee0fa0fc58f07436131298b273b638 SHA512 9053fa639a6873256a596e0c1099922fcbf94fc5d73b36481e52dfa42ad97b7763d035cc8488c6ee4a0d25256263b7cc4a4fe84cbb6cd060474c69903fa05128 WHIRLPOOL 9a14718ac581b3511d27589345820720809e05c0ac92303fecbd18c2ad15bb129a1ea28d3172978f17069a296c47eefb9be8b195f567b5f554956ee7bfb5fc54
+EBUILD openldap-2.4.38-r1.ebuild 22531 SHA256 69c534d444e8dd4014e76dbe4fc464d139d93ac3438d9dc08ce0e14801773e04 SHA512 1bb338340efbbb2e5e869bc0199a3d325b8dd2ec0bc62efbfe1004141eec8e25919480ed85db9fd1355c0da4a018eced141b99b3ad4c88da1c08e9e499de0744 WHIRLPOOL 5ea6402e2fd170f2f9aee89a557a5347e683b2386bcc5c2fece5c7af571b7fd1e53ad138d0512bbc0b538b4a0c7a30eb9b34bf52f8760618fb5d03536bd00c7d
+EBUILD openldap-2.4.38-r2.ebuild 23959 SHA256 c78f141da8a28f5596ba206902134d1f9ae01d26180ca676ab78743233082f96 SHA512 178fd34c0adcd095ffba004836b145e6072d9c067a9dd7563d3a905035361c6d1c43dafe535a0bfc4585594ac20bd9ee7c272ad644566b02fc7bdaae897ccfb4 WHIRLPOOL d05a6946a26ef8a57d61ce88f5b7c82da914cca3d599875c7d7dace8ce15593b3a9d7efd4a50fb8df9a42f2a396128bbc7b438bf88f1559609ad53e2e4b40767
+MISC ChangeLog 81184 SHA256 00b40e7788590d3cfc3dfa75fbe823e3627adffb8991bf0b30281adb9f680cc7 SHA512 36e90b653210e2ea02bb1f9b43323c150898f88e3c6a8e39e2cdf3836e949d6ceaf77d199e56875a2c4a3684b70f74dba86aeae71aca769763c908877419c7ea WHIRLPOOL 22b923e58d86699c0ed7295150324f6ddeb0c1e01eaa50ba24283f71c7300ae3296a7b6e4980e575f19cce3493f6657ea91669c3378793e85aa47db2d96e74be
 MISC metadata.xml 664 SHA256 70c2b3ca29517c6cafffef5802fcd6a513517d320a118bf2205b0033ffa384ea SHA512 55e576a18ae7c71f3fa413b252a40945059d9f9308f4036739124bd241cc6c409816124c7e4fd30df965963d93907bce03ee117489fdb3443e62bf00dac9da25 WHIRLPOOL ce3c30df03e9026415bd72d5f3c132bb3273a597a6ca8e8928957baae1b4bc6d80ab8f7f0698d72cd8d5773a957ee2a929d3c2bdd4f5a6cd6ba88f9b9e0aa4c7
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQJ8BAEBCABmBQJTfSnCXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
-ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ2REJCMDdDQzRGMERBRDA2RUEwQUZFNDFC
-MDdBMUFFQUVGQjQ0NjRFAAoJELB6GurvtEZOL+0P/iyw7CkJjgD2Q1gSS7e55SHl
-nOWEu3281yOYio9Z4Gr3opiOVMy6qyuuFHKfe6KWeNnM90gwNWYTEwng6wUYtx/c
-KLvxR8DPLKYL+imJ0RcLQ+Se7KxtxiR4qNCc7hom1mxGS7ygW2ioTAApBRLa17Up
-5o1QbWpb0DMtQrqxZNxzmBuJpJ9f8KvTcmPvumffnu6gI2yhBDvDBBh6Hfq1QbWI
-G0f7FbD7J/GIhiFH9xdfYkORl2iAJA/xZtQLTKcBQVf1Nvab3vC9YtbMfV+1U+si
-Myx3XXm0/N7teGurThbmO5cEFLRR6pHc9ZEk/GvFFt8XYUvS0646RJNBT7UIamU7
-R6Tsx6XBeaZbZ2MSaKc916EyB6YjjKwFquSUjNuSD5R/E28ljgkFv9Fw8zklaI/A
-1RHpv2vMrSoHHIBRYtqLgWUFFLFdQVlMsmpVy3pwv/n5Vrgy56dhRJXO6nie5Loq
-vqe0dkz8TkLhU4AI8rOFAtiIHL/zefwdyT7OTN6RcEZcjLaWSQ7tRZiFas3ebOjf
-LXTrEAMees8XC+/CZ+12G5iW4vjJoIusP9Zeq8f/l03EDqtYqbrHImXtEmjLPf7f
-x9gzYcTEjh/0unjr04DlhtrVQHlaNjjat2fpVBdsfjZM7soe9AQOuWpKMoBCELNI
-BshFeGrn86zUXc8hw6+x
-=R73k
+iQIcBAEBCAAGBQJTgCecAAoJEC8ZTXQF1qEPEhkP/iGnxGI6rg1ASDIhJYHtWsKY
+tVj2WZ3RGbNvWUjhzwJxHwnMti1G4ddnTXKSZXjfwrOIG/attA0x2PQI7l3v4WGK
+ntqzywcIzK8ocSvXMYiZ6MKmMAvV7SaXNpVsID18D/czTaGX0IOZIq84UV0rL69N
+5RWKb4W/0s++wX8d95GbvqZwHz5Pd5A+q6WycNOUM6AFIsK08+Zul99AxEv6uTXH
+tXEKQpFfwP6c5Ez0wqj1RQGj4UTnkraZtUoeJfHIz+zfMOWELxDP3LdsCOJO3L5y
+nMBxBGgtZt8syF+C1tIAV7nhMxbosTPIJ8q8XNqjULCjYr9+n8Sa89fcVxNX3r9L
+OJLDUF6clY5R1i6G/92ikDox+k0BEKc9v4v4wzpWxhHDLHwPLXwnqsWAVN77B2ks
+3J8vOnh90tRFsZxjbxsuAFp6b12blJtsnpgr+WTh/X/Gaa0wNWlOgNLumCaxjcfn
+j+bpDyV6BYLffBrv+b5CicUTfytWqEnbYgPKkjQhh4UFM2v6AjZbIBynF8guJ/+t
+wAbJ+zvwYzX4rdep+tSkEI5+XDn+YIhcp7ETBDL2Z2fIzYLuMOyhQQuWnf9A2K/r
+Xi+haw/6inoCFt8vLgoWmqsp6uNHcu4KpwzClzG8UjhQG2WgnbpgFz2CawEE3X19
+Av0FwM58ucX+cticXZ8b
+=uhft
 -----END PGP SIGNATURE-----
